<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:src="@drawable/ic_arrow_back"
                app:tint="?colorOnPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/base"
                android:layout_weight="9"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="?colorOnPrimary"
                android:textSize="@dimen/text_large_x4" />

            <ImageView
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginEnd="@dimen/base"
                android:src="@drawable/ic_save"
                app:tint="?colorOnPrimary" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameTextInput"
            android:hint="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Preference 1"
            android:textSize="@dimen/text_medium" />

        <ToggleButton
            android:id="@+id/pref1Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Preference 2"
            android:textSize="@dimen/text_medium" />

        <ToggleButton
            android:id="@+id/pref2Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/base"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Preference 3"
            android:textSize="@dimen/text_medium" />

        <ToggleButton
            android:id="@+id/pref3Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/base"
        android:padding="@dimen/base"
        app:icon="@drawable/ic_logout"
        android:text="@string/sign_out"
        android:textSize="@dimen/text_medium" />
</LinearLayout>